Larger logos for supporting orgs; fixed alignment of their logos on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -232,7 +232,7 @@ footer a:hover, footer a:focus {
 }
 
 #supporting-orgs .logos img {
-  margin-left: 50px;
+  margin: 10px 25px;
 }
 
 .navbar-default .navbar-offcanvas {
